<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="add_button">1</string>
    <string name="session_stop">Stop</string>
    <string name="session_start">Start</string>

    <string-array name="classSizes">
        <item>Tiny (0-40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>
    <string-array name="currentQuarter">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session 1</item>
        <item>Summer Session 2</item>
        <item>Special Summer Session </item>
        <item>Fall</item>
    </string-array>
    >
    <string-array name="preferences">
        <item>Sort by number of classes in common</item>
        <item>Prioritize small classes</item>
        <item>Prioritize recent</item>
<!--        <item>this quarter only</item>-->

    </string-array>
    <string-array name="time">
        <item>AM</item>
        <item>PM</item>

    </string-array>
</resources>