...
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonStart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BoF List" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

...
